--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+input[type="email"],
+input[type="password"],
+
+input[type="text"] {
+    @apply block w-full mb-2 rounded-xl;
+    @apply border p-2 border-gray-300 bg-gray-100;
+}
+button{
+    @apply flex w-full justify-center gap-2 text-gray-700 font-semibold;
+    @apply border border-gray-300 rounded-xl px-6 py-2;
+}
+button[type="submit"], .submit{
+    @apply border-primary bg-primary text-white;
+}
